Finished module 5 exercise

--- a/5-multi-container/backend/package.json
+++ b/5-multi-container/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon app.js"
   },
   "author": "Maximilian Schwarzmüller / Academind GmbH",
   "license": "ISC",
@@ -12,6 +13,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon" : "^2.0.6"
+  },
+  "devDependencies": {
+    "nodemon" : "^2.0.6"
   }
 }
